# Process this file with automake to produce Makefile.in

MAINTAINERCLEANFILES = Makefile.in

AM_CFLAGS = @ac_CFLAGS@ @ac_CFLAGS_W@

INCLUDES = @ac_INCLUDES@

noinst_LTLIBRARIES    = libcommon.la
libcommon_la_SOURCES = \
	cgraph.c \
	cgraph.h \
	color.c \
	color.h \
	perm_set.c \
	perm_set.h \
	constants.h \
	dynarray.c \
	dynarray.h \
	dyncolors.c \
	dyncolors.h \
	dynconnections.c \
	dynconnections.h \
	dynints.c \
	dynints.h \
	dynmaps.c \
	dynmaps.h \
	dynmolecules.c \
	dynmolecules.h \
	dynreport_definition_containers.c \
	dynreport_definition_containers.h \
	dynrule_aggregates.c \
	dynrule_aggregates.h \
	dynrules.c \
	dynrules.h \
	dynspecie_containers.c \
	dynspecie_containers.h \
	dynspecies.c \
	dynspecies.h \
	dynsymbols.c \
	dynsymbols.h \
	fsa.c \
	fsa.h \
	ilist.c \
	ilist.h \
	llist.c \
	llist.h \
	molecule.c \
	molecule.h \
	myrand.c \
	myrand.h \
	output.c \
	output.h \
	perm_set.c \
	perm_set.h \
	reactant_definition.c \
	reactant_definition.h \
	reaction_definition.c \
	reaction_definition.h \
	report_definition.c \
	report_definition.h \
	report_definition_container.h \
	rule.c \
	rule.h \
	rule_aggregate.c \
	rule_aggregate.h \
	specie.c \
	specie.h \
	specie_container.h \
	world.c \
	world.h

libcommon_la_LIBADD  =

